Fixed some more links...

--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -47,7 +47,7 @@
 		<h3>Neues Dokument anlegen</h3>
 		<p>
 			Möchtest du Shownotes für einen Podcast schreiben, der nicht in der Liste steht? Kein Problem! Suche den richtigen Podcast, gib eine Episodennummer ein und schon kann es losgehen.<br />
-			Falls du den Podcast deiner Wahl nicht finden solltest, <a href="mailto:team@shownot.es">melde dich bitte bei uns</a>.
+			Falls du den Podcast deiner Wahl nicht finden solltest, <a href="mailto:intern@shownot.es">melde dich bitte bei uns</a>.
 		</p>
 		<angucomplete-alt id="podcast"
 			                  placeholder="Podcast"
