--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -115,5 +115,5 @@
 <footer>
     <p>Alle Sendungsnotizen stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a>.</p>
 
-    <a class="FlattrButton" style="display:none;" href="http://shownot.es/"></a>
+    <a class="FlattrButton" style="display:block;" href="http://shownot.es/"></a>
 </footer>
