--- a/app/components/static/donate.html
+++ b/app/components/static/donate.html
@@ -14,6 +14,6 @@
 	</li>
 </ul>
 
-<p>Wenn du uns auf anderem Wege etwas zukommen lassen möchtest oder Feedback hast, kannst du uns gerne eine <a href="mailto:team@shownot.es">E-Mail</a> schicken.</p>
+<p>Wenn du uns auf anderem Wege etwas zukommen lassen möchtest oder Feedback hast, kannst du uns gerne eine <a href="mailto:intern@shownot.es">E-Mail</a> schicken.</p>
 
 <snotes-footer></snotes-footer>
