--- a/app/components/static/faq.html
+++ b/app/components/static/faq.html
@@ -33,7 +33,7 @@
 		<li><a href="/faq/#belohnen">Bin ich dazu verpflichtet, die Helfer namentlich zu nennen oder zu belohnen?</a></li>
 	</ul>
 
-	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community">Community</a> oder schick uns eine <a href="mailto:team@shownot.es">E-Mail</a>!</p>
+	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community/">Community</a> oder schick uns eine <a href="mailto:intern@shownot.es">E-Mail</a>!</p>
 
 </div>
 
@@ -53,7 +53,7 @@
 <p>
 	<q>OSF</q> steht für <em><q>Open Shownotes Format</q></em>. Dieses von uns definierte Format soll die Erstellung von Sendungsnotizen erleichtern und standardisieren. Beispiel für eine Zeile in OSF:<br />
 	<code>00:13:37 Geofencing &lt;https://de.wikipedia.org/wiki/Geofencing&gt; #g</code><br />
-	Von links nach rechts: <em>Zeitstempel</em>, <em>Textangabe</em>, <em>Link</em>, <em>Tag</em>. Eine <a href="#">ausführliche Dokumentation</a> gibt es auch.
+	Von links nach rechts: <em>Zeitstempel</em>, <em>Textangabe</em>, <em>Link</em>, <em>Tag</em>. Eine <a href="https://github.com/shownotes/OpenShownotesFormat">ausführliche Dokumentation</a> gibt es auch.
 </p>
 
 <h4 id="englisch">
@@ -86,7 +86,7 @@
 
 <h4 id="bezahlung">Wieso bekomme ich als Helfer kein Geld?</h4>
 <p>
-	<em>shownot.es</em> ist ein Projekt von, mit und für Freiwillige. Die <a href="/donate">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire <q>Bezahlung</q> von selbst einer einzigen Person ist hingegen (noch) utopisch.
+	<em>shownot.es</em> ist ein Projekt von, mit und für Freiwillige. Die <a href="/donate/">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire <q>Bezahlung</q> von selbst einer einzigen Person ist hingegen (noch) utopisch.
 </p>
 
 <hr />
