--- a/app/components/static/rules.html
+++ b/app/components/static/rules.html
@@ -17,13 +17,13 @@
 	</li>
 	<li>
 		<strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />
-		Wir bezahlen dich nicht. Eingenommene <a href="/donate">Spenden</a> kommen der Plattform zugute.</li>
+		Wir bezahlen dich nicht. Eingenommene <a href="/donate/">Spenden</a> kommen der Plattform zugute.</li>
 	<li>
 		<strong>Spam ist absolut verboten.</strong><br />
 		Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.
 	</li>
 </ol>
 
-<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="/faq">häufig gestellten Fragen</a>.</p>
+<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="/faq/">häufig gestellten Fragen</a>.</p>
 
 <snotes-footer></snotes-footer>
