--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -5,7 +5,7 @@
     </a></h1>
 </header>
 
-<nav class="account" ng-controller="SidebarCrtl">
+<nav class="account" ng-controller="SidebarCtrl">
     <ul>
         <li>
             <label class="toggle" for="toggle-form" title="Mein Account">
@@ -77,9 +77,9 @@
 </div>
 
 
-<nav class="menu" ng-controller="SidebarSearchCrtl">
+<nav class="menu">
     <ul>
-        <li class="search" title="Suchbegriff(e) eingeben und mit Enter bestätigen">
+        <li class="search" title="Suchbegriff(e) eingeben und mit Enter bestätigen" ng-controller="SidebarSearchCtrl">
             <label for="search"><span class="icon-search"></span></label><!--
             --><input type="search"
                       id="search"
