first pages with l10n support

--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -1,8 +1,8 @@
-<h2>Sendungen</h2>
+<h2 translate="ARCHIVE_SHOWS"></h2>
 
-<p>In diesem Archiv sind alle Podcasts aufgeführt, für die auf <em>shownot.es</em> bereits Sendungsnotizen erstellt wurden. <a href="/faq/">Wie kommt mein Podcast auf diese Liste?</a></p>
+<p translate="ARCHIVE_INTRODUCTION"></p>
 
-<h3>Kürzlich erstellt für</h3>
+<h3 translate="ARCHIVE_RECENTLY"></h3>
 
 <div class="archive">
     <archivebox ng-repeat="pod in recentpodcasts" pod="pod"></archivebox>
@@ -10,7 +10,7 @@
 
 <hr />
 
-<h3>Alle Podcasts</h3>
+<h3 translate="ARCHIVE_ALL_SHOWS"></h3>
 
 <div class="archive">
     <archivebox ng-repeat="pod in podcasts" pod="pod"></archivebox>
