--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -5,8 +5,8 @@
 	<div>
 		<h2>{{podcast.title}}</h2>
 		<h3>{{filterepisodes.length}}
-            <span ng-if="filterepisodes.length == 1">Episode</span>
-            <span ng-if="filterepisodes.length != 1">Episoden</span>
+            <span ng-if="filterepisodes.length == 1" translate="PODCAST_EPISODE"></span>
+            <span ng-if="filterepisodes.length != 1" translate="PODCAST_EPISODES"></span>
         </h3>
 	</div>
 
@@ -16,14 +16,14 @@
 -->
 <table>
 	<tr>
-		<th>Episode</th>
-		<th>Datum</th>
-		<th>Podcaster</th>
-		<th>Shownoter</th>
+		<th translate="PODCAST_EPISODE"></th>
+		<th translate="PODCAST_DATE"></th>
+		<th translate="PODCAST_PODCASTER"></th>
+		<th translate="PODCAST_SHOWNOTER"></th>
 	</tr>
 	<tr ng-repeat="ep in (filterepisodes = (podcast.episodes | filter:hasPub()) | orderBy:'number':true)">
 		<td><a ui-sref="view-episode({ podcast: podcast.slug, number: ep.number })">
-			<span ng-hide="ep.title">Episode {{ep.number}}</span>
+			<span ng-hide="ep.title">{{ 'PODCAST_EPISODE' | translate }} {{ep.number}}</span>
 			<span ng-show="ep.title">{{ep.title}}</span>
 		</a></td>
 		<td>{{ep.date | date:'medium'}}</td>
@@ -31,7 +31,7 @@
 		<td>{{getPub(ep).shownoters.length}}</td>
 	</tr>
 	<tr ng-hide="filterepisodes.length > 0">
-		<td colspan="4">keine Episoden</td>
+		<td colspan="4" translate="PODCAST_NO_EPISODES"></td>
 	</tr>
 </table>
 
