--- a/app/components/document/render/document-render.html
+++ b/app/components/document/render/document-render.html
@@ -6,7 +6,7 @@
                     ng-click="enableFormat(f.name)">
                 {{f.caption}}
             </button>
-            <button title="HTML herunterladen"><span class="icon-arrow-down" ng-click="download()"></span></button>
+            <button title="{{ 'DOCUMENT_RENDER_HTML' | translate }}"><span class="icon-arrow-down" ng-click="download()"></span></button>
         </div>
 
     </div>
