--- a/app/components/static/community.html
+++ b/app/components/static/community.html
@@ -1,34 +1,34 @@
-<h2>Community</h2>
+<h2 translate="COMMUNITY_HEADLINE"></h2>
 
-<p>Die Diskussion rund um Sendungsnotizen und diese Plattform kann auf mehreren Ebenen stattfinden:</p>
+<p translate="COMMUNITY_INTRODUCTION"></p>
 
 <ul class="iconlist">
 	<li>
 		<span class="icon-mail"></span>
 		<div>
-			<h3>Mailingliste</h3>
-			<p>Unsere öffentliche <a href="http://lists.shownot.es/cgi-bin/mailman/listinfo/mailman">Mailingliste</a> bietet die Möglichkeit zum Austausch von Shownotern und Podcastern.</p>
+			<h3 translate="COMMUNITY_MAILINGLIST_TITLE"></h3>
+			<p translate="COMMUNITY_MAILINGLIST_TEXT"></p>
 		</div>
 	</li>
 	<li>
 		<span class="icon-twitter"></span>
 		<div>
-			<h3>Twitter &amp; App.net</h3>
-			<p>Wenn es mal schnell und unkompliziert gehen soll, kannst du uns unter <a href="https://twitter.com/DieShownotes">@DieShownotes</a> (Twitter) und <a href="https://alpha.app.net/shownotes">@shownotes</a> (App.net) folgen oder den <a href="https://twitter.com/search?f=realtime&q=%23shownotes">entsprechenden Hashtag</a> verwenden.</p>
+			<h3 translate="COMMUNITY_TWITTER_TITLE"></h3>
+			<p translate="COMMUNITY_TWITTER_TEXT"></p>
 		</div>
 	</li>
 	<li>
 		<span class="icon-bubble"></span>
 		<div>
-			<h3>Internet Relay Chat</h3>
-			<p>Auf Freenode sind wir im IRC-Channel <a href="irc://chat.freenode.net/shownotes">#shownotes</a> zu finden. Du kannst dich über einen <a href="http://de.wikipedia.org/wiki/IRC-Client#G.C3.A4ngige_IRC-Clients">IRC-Client</a> oder dem <a href="https://kiwiirc.com/client/irc.freenode.net/shownotes">Webchat</a> verbinden.</p>
+			<h3 translate="COMMUNITY_IRC_TITLE"></h3>
+			<p translate="COMMUNITY_IRC_TEXT"></p>
 		</div>
 	</li>
 	<li>
 		<span class="icon-github"></span>
 		<div>
-			<h3>GitHub</h3>
-			<p>Die komplette Plattform wird öffentlich auf <a href="https://github.com/shownotes">GitHub</a> entwickelt. Wenn du dich daran beteiligen möchtest, kannst du dort gerne vorbeischauen.</p>
+			<h3 translate="COMMUNITY_GITHUB_TITLE"></h3>
+			<p translate="COMMUNITY_GITHUB_TEXT"></p>
 		</div>
 	</li>
 </ul>
